Playlist panel was not hidden with hide="panels"

--- a/src/template.html
+++ b/src/template.html
@@ -40,15 +40,15 @@
 					</button>
 					<button type="button" id="reward" class="nosmallest">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
-							<path d="M 8,0 0,8 8,16 z" />
-							<path d="M 16,0 8,8 16,16 z" />
+							<path d="M 12,0 4,8 12,16 z" />
+							<path d="M 20,0 12,8 20,16 z" />
 						</svg>
 					</button>
 					<input type="time" step="1" min="0:00" id="inputtime" class="nosmaller" />
 					<button type="button" id="foward">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
-							<path d="M 0,0 8,8 0,16 z" />
-							<path d="M 8,0 16,8 8,16 z" />
+							<path d="M 4,0 12,8 4,16 z" />
+							<path d="M 12,0 20,8 12,16 z" />
 						</svg>
 					</button>
 					<button type="button" id="fastfoward">
@@ -121,6 +121,6 @@
 			</a>
 		</section>
 	</main>
-	<nav id="playlist">
+	<nav id="playlist" class="panel">
 	</nav>
 </div>
