--- a/live_config.html
+++ b/live_config.html
@@ -108,6 +108,7 @@
         <label for="meta_hide_1" class="inline_block"><input id="meta_hide_1" name="meta_hide[]" type="checkbox" value="actions" />Actions</label>
         <label for="meta_hide_2" class="inline_block"><input id="meta_hide_2" name="meta_hide[]" type="checkbox" value="chapters" />Chapters</label>
         <label for="meta_hide_3" class="inline_block"><input id="meta_hide_3" name="meta_hide[]" type="checkbox" value="panels" />Panels</label>
+        <label for="meta_hide_3" class="inline_block"><input id="meta_hide_3" name="meta_hide[]" type="checkbox" value="panels-except-play" />Panels</label>
     </p>
 </fieldset>
 
