Temporary enhancement over hide="panels-except-play"
still missing paused with focus

--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
-<div id="interface" tabindex="0">
+<div id="interface" tabindex="0" class="not-used">
 	<main>
 		<img id="poster" class="nosmall" src="" alt="" />
 		<section id="pageerror" role="alert">
