Clicking the download button should trigger loading it, not display it

--- a/src/template.html
+++ b/src/template.html
@@ -105,7 +105,7 @@
 				</svg>
 				<span class="nosmall">${__.e_mail}</span>
 			</a>
-			<a href="#" target="social" id="link" aria-label="${__.download}">
+			<a href="#" target="social" download="" id="link" aria-label="${__.download}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 6,6 26,6 16,26 z" />
 					<rect x="6" y="22" width="20" height="4" />
