--- a/live_chapters.html
+++ b/live_chapters.html
@@ -100,7 +100,8 @@
 
         <pre id="vtt_source"></pre>
 
-        <p>Then insert a &lt;track&gt; tag reffering it in your &lt;audio control&gt; tag</p>
+        <p>Then insert a &lt;track kind="chapters" default src="…"&gt; tag reffering it in your &lt;audio control&gt; tag</p>
+
     </fieldset>
 </div>
 
