--- a/live_chapters.html
+++ b/live_chapters.html
@@ -3,7 +3,7 @@
 
 <cpu-audio 
     title="First, Choose an URL for source"
-    hide="poster,actions">
+    hide="poster actions">
     <audio controls id="sound">
         <source src="./tests-assets/blank.mp3" type="audio/mpeg" />
         <track kind="chapters" src="" default />
