information about test set-up

--- a/tests-api.html
+++ b/tests-api.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="tests/qunit.css">
 	<script>
+		// needed to avoid a unwanted hot start
 		window.localStorage.clear();
 	</script>
 	<script src="./dist/cpu-audio.js"></script>
