--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="tests/qunit.css">
 	<script>
+		// needed to avoid a unwanted hot start
 		window.localStorage.clear();
 	</script>
 	<script src="./dist/cpu-audio.js"></script>
@@ -29,7 +30,7 @@
 	</ul>
 
 	<cpu-audio>
-		<audio id="track" controls="controls"  preload="auto" muted="muted">
+		<audio id="track" controls="controls" preload="auto" muted="muted">
 			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
