I have to get an user interaction before running tests on Chrome
Autoplay policy (pending) #17

--- a/tests-interface.html
+++ b/tests-interface.html
@@ -17,6 +17,7 @@
 	<p>
 		This is the graphic interface, working only web the webcomponent is fully supported by the browser.
 	</p>
+	
 	<p>
 		See also :
 	</p>
@@ -32,6 +33,13 @@
 			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
+
+	<p>
+		<button type="button" id="get_focus">
+			To launch the tests, <strong>please click on this button</strong>, giving focus, to autorize auto-play and click events.
+		</button>
+		Elsewhere, numerous tests will fail. See <a href="https://github.com/dascritch/cpu-audio/issues/17">issue #17 on our github for details</a>.
+	</p>
 
 	<div id="playground"></div>	
 
