--- a/tests-minimal.html
+++ b/tests-minimal.html
@@ -19,6 +19,7 @@
 		This is the minimal service tests. Your browser should be able to use the hash links, even if the graphical interface don't show up, and the audio player still show the native controls.<br />
 		Manual test : <a href="#track&t=1m">named jump at 1mn</a>, <a href="#&t=30s">unnamed jump at 30</a>, <a href="#&t=1m30s,1m40s">unnamed jump at 1mn30 and stops at 1mn40</a>
 	</p>
+
 	<p>
 		See also :
 	</p>
@@ -34,6 +35,14 @@
 			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
+
+	<p>
+		<button type="button" id="get_focus">
+			To launch the tests, <strong>please click on this button</strong>, giving focus, to autorize auto-play and click events.
+		</button>
+		Elsewhere, numerous tests will fail. See <a href="https://github.com/dascritch/cpu-audio/issues/17">issue #17 on our github for details</a>.
+	</p>
+
 
 	<div id="playground"></div>	
 
