Share functions on streaming should be different #83

--- a/src/template.html
+++ b/src/template.html
@@ -105,7 +105,8 @@
 					<path d="M 6,6 26,6 16,26 z" />
 					<rect x="6" y="22" width="20" height="4" />
 				</svg>
-				<span class="nosmall">${__.download}</span></a>
+				<span class="nosmall">${__.download}</span>
+			</a>
 			<a id="back" aria-label="${__.back}" title="${__.back}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 9,8 24,23 23,24 8,9 z" />
