--- a/src/template.html
+++ b/src/template.html
@@ -84,19 +84,19 @@
 			</a>
 			<a href="#" target="social" id="twitter" class="nonativeshare nosmall" aria-label="${__.twitter}" title="${__.twitter}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
-					<path d="M 25.941,9.885 C 25.221,10.205 24.448,10.422 23.637,10.520 24.465,10.020 25.101,9.230 25.401,8.288 24.626,8.750 23.768,9.086 22.854,9.267 22.122,8.483 21.080,7.993 19.926,7.993 c -2.215,0 -4.011,1.806 -4.011,4.034 0,0.316 0.035,0.623 0.103,0.919 -3.333,-0.168 -6.288,-1.774 -8.267,-4.215 -0.345,0.596 -0.542,1.289 -0.542,2.028 0,1.399 0.708,2.634 1.784,3.358 -0.657,-0.020 -1.276,-0.202 -1.816,-0.504 -3.98e-4,0.016 -3.98e-4,0.033 -3.98e-4,0.050 0,1.954 1.382,3.585 3.217,3.955 -0.336,0.092 -0.690,0.141 -1.056,0.141 -0.258,0 -0.509,-0.025 -0.754,-0.072 0.510,1.602 1.991,2.769 3.746,2.801 -1.372,1.082 -3.102,1.726 -4.981,1.726 -0.323,0 -0.642,-0.019 -0.956,-0.056 1.775,1.144 3.883,1.812 6.148,1.812 7.377,0 11.411,-6.147 11.411,-11.478 0,-0.174 -0.004,-0.348 -0.011,-0.522 0.783,-0.569 1.463,-1.279 2.001,-2.088 z" />
+					<path d="M 25.9,9.9 C 25.2,10.2 24.4,10.4 23.6,10.5 24.5,10 25.1,9.2 25.4,8.2 24.6,8.8 23.8,9.1 22.9,9.3 22.1,8.5 21.1,8 19.9,8 c -2.2,0 -4,1.8 -4,4 0,0 0,0.6 0.1,0.9 -3.3,-0.2 -6.3,-1.8 -8.3,-4.2 -0.3,0.6 -0.5,1.3 -0.5,2 0,1.4 0.7,2.6 1.8,3.4 -0.7,0 -1.3,-0.2 -1.8,-0.5 0,0 0,0 0,0.1 0,2 1.4,3.6 3.2,4 -0.3,0.1 -0.7,0.1 -1.1,0.1 -0.3,0 -0.5,0 -0.8,-0.1 0.5,1.6 2,2.8 3.7,2.8 -1.4,1.1 -3.1,1.7 -5,1.7 -0.3,0 -0.6,0 -1,-0.1 1.8,1.1 3.9,1.8 6.1,1.8 7.4,0 11.4,-6.1 11.4,-11.4 0,-0.2 0,-0.3 0,-0.5 0.8,-0.6 1.4,-1.3 2,-2.1 z" />
 				</svg>
 				<span class="nosmall">${__.twitter}</span>
 			</a>
 			<a href="#" target="social" id="facebook" class="nonativeshare nosmall" aria-label="${__.facebook}" title="${__.facebook}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
-					<path d="m 21.117,16.002 -3.728,0 0,10.027 -4.297,0 0,-10.027 -2.070,0 0,-3.280 2.070,0 0,-2.130 c 0,-2.894 1.248,-4.616 4.652,-4.616 l 3.922,0 0,3.549 -3.203,0 c -0.950,-0.001 -1.068,0.495 -1.068,1.421 l -0.005,1.775 4.297,0 -0.568,3.280 0,2.34e-4 z" />
+					<path d="m 21.1,16 -3.7,0 0,10 -4.3,0 0,-10 -2.1,0 0,-3.3 2.1,0 0,-2.1 c 0,-2.9 1.2,-4.6 4.7,-4.6 l 3.9,0 0,3.5 -3.2,0 c -1,0 -1.1,0.5 -1.1,1.4 l -0,1.8 4.3,0 -0.6,3.3 0,0 z" />
 				</svg>
 				<span class="nosmall">${__.facebook}</span>
 			</a>
 			<a href="#" target="social" id="email" class="nonativeshare" aria-label="${__.e_mail}" title="${__.e_mail}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
-					<path d="m 8.030,8.998 15.920,0 c 0.284,0 0.559,0.053 0.812,0.155 l -8.773,9.025 -8.773,-9.026 c 0.253,-0.101 0.528,-0.155 0.812,-0.155 z m -1.990,12.284 0,-10.529 c 0,-0.036 0.002,-0.073 0.004,-0.109 l 5.835,6.003 -5.771,5.089 c -0.045,-0.146 -0.068,-0.298 -0.069,-0.453 z m 17.910,1.754 -15.920,0 c -0.175,0 -0.348,-0.020 -0.514,-0.060 l 5.662,-4.993 2.811,2.892 2.811,-2.892 5.662,4.993 c -0.165,0.039 -0.338,0.060 -0.514,0.060 z m 1.990,-1.754 c 0,0.155 -0.023,0.307 -0.068,0.453 l -5.771,-5.089 5.835,-6.003 c 0.002,0.036 0.004,0.073 0.004,0.109 z" />
+					<path d="m 8,9 15.9,0 c 0.3,0 0.6,0.1 0.8,0.2 l -8.8,9 -8.8,-9 c 0.3,-0.1 0.5,-0.2 0.8,-0.2 z m -2,12.3 0,-10.5 c 0,0 0,-0.1 0,-0.1 l 5.8,6 -5.8,5.1 c 0,-0.1 -0.1,-0.3 -0.1,-0.4 z m 17.9,1.8 -15.9,0 c -0.2,0 -0.3,0 -0.5,-0.1 l 5.7,-5 2.8,2.9 2.8,-2.9 5.7,5 c -0.2,0 -0.3,0.1 -0.5,0.1 z m 2,-1.8 c 0,0.2 0,0.3 -0.1,0.5 l -5.8,-5.1 5.8,-6 c 0,0 0,0.1 0,0.1 z" />
 				</svg>
 				<span class="nosmall">${__.e_mail}</span>
 			</a>
