.nosmall & co weren't working in some conditions

--- a/src/template.html
+++ b/src/template.html
@@ -76,19 +76,19 @@
 			</a>
 		</section>
 		<section id="pageshare">
-			<a href="#" target="social" id="nativeshare" class="nosmall" aria-label="${__.share}" title="${__.share}">
+			<a href="#" target="social" id="nativeshare" aria-label="${__.share}" title="${__.share}">
 				<svg>
 					<use xlink:href="#share_symbol" />
 				</svg>
 				<span class="nosmall">${__.share}</span>
 			</a>
-			<a href="#" target="social" id="twitter" class="nonativeshare nosmall" aria-label="${__.twitter}" title="${__.twitter}">
+			<a href="#" target="social" id="twitter" class="nonativeshare" aria-label="${__.twitter}" title="${__.twitter}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 25.9,9.9 C 25.2,10.2 24.4,10.4 23.6,10.5 24.5,10 25.1,9.2 25.4,8.2 24.6,8.8 23.8,9.1 22.9,9.3 22.1,8.5 21.1,8 19.9,8 c -2.2,0 -4,1.8 -4,4 0,0 0,0.6 0.1,0.9 -3.3,-0.2 -6.3,-1.8 -8.3,-4.2 -0.3,0.6 -0.5,1.3 -0.5,2 0,1.4 0.7,2.6 1.8,3.4 -0.7,0 -1.3,-0.2 -1.8,-0.5 0,0 0,0 0,0.1 0,2 1.4,3.6 3.2,4 -0.3,0.1 -0.7,0.1 -1.1,0.1 -0.3,0 -0.5,0 -0.8,-0.1 0.5,1.6 2,2.8 3.7,2.8 -1.4,1.1 -3.1,1.7 -5,1.7 -0.3,0 -0.6,0 -1,-0.1 1.8,1.1 3.9,1.8 6.1,1.8 7.4,0 11.4,-6.1 11.4,-11.4 0,-0.2 0,-0.3 0,-0.5 0.8,-0.6 1.4,-1.3 2,-2.1 z" />
 				</svg>
 				<span class="nosmall">${__.twitter}</span>
 			</a>
-			<a href="#" target="social" id="facebook" class="nonativeshare nosmall" aria-label="${__.facebook}" title="${__.facebook}">
+			<a href="#" target="social" id="facebook" class="nonativeshare" aria-label="${__.facebook}" title="${__.facebook}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="m 21.1,16 -3.7,0 0,10 -4.3,0 0,-10 -2.1,0 0,-3.3 2.1,0 0,-2.1 c 0,-2.9 1.2,-4.6 4.7,-4.6 l 3.9,0 0,3.5 -3.2,0 c -1,0 -1.1,0.5 -1.1,1.4 l -0,1.8 4.3,0 -0.6,3.3 0,0 z" />
 				</svg>
