Unuseful “elapsed” progress bar and element.CPU.update_buffered() were re-activated

--- a/src/template.html
+++ b/src/template.html
@@ -63,8 +63,7 @@
 				</div>
 				<div id="line">
 					<div id="time">
-						<div id="loadingline"></div>
-						<div id="elapsedline" role="progressbar"></div>
+						<div id="loadingline" role="progressbar"></div>
 						<time id="popup">--:--</time>
 					</div>
 				</div>
