Native lazy-loading of the feature picture

--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,6 @@
 <div id="interface" tabindex="0">
 	<main>
-		<img id="poster" class="nosmall" src="" alt="" decoding="async" />
+		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<section id="pageerror" role="alert">
 		</section>
 		<section id="pagemain">
