--- a/live_config.html
+++ b/live_config.html
@@ -18,8 +18,8 @@
 	<a href="#configurator_css">Configure css</a>
 	<a href="#generated_css">Generated css</a>
 	<span id="spacer">&nbsp;</span>
-	<button type="button" id="do_waiting">Do waiting</button>
-	<button type="button" id="do_standby">Do standby</button>
+	<button type="button" id="do_waiting">Do loading</button>
+	<button type="button" id="do_glow">Do glow</button>
 	<button type="button" id="do_error">Do error</button>
 </p>
 
@@ -406,9 +406,9 @@ document.addEventListener('DOMContentLoaded', function(){
 		cpu_audio.CPU.audiotag.pause();
 		cpu_audio.CPU.set_act_container('loading');
 	});
-	document.querySelector('#do_standby').addEventListener('click', function() {
+	document.querySelector('#do_glow').addEventListener('click', function() {
 		cpu_audio.CPU.audiotag.pause();
-		cpu_audio.CPU.set_act_container('standby');
+		cpu_audio.CPU.set_act_container('glow');
 	});	
 	let in_error = false;
 	document.querySelector('#do_error').addEventListener('click', function() {
