Document and live-config options for streamed DASH and HLS media
Support MSE API or DASH for non-bufferred playing #12

--- a/live_config.html
+++ b/live_config.html
@@ -33,6 +33,8 @@
 				<option selected value="audio/ogg">OGG Vorbis</option>
 				<option value="audio/aac">MP4 AAC</option>
 				<option value="audio/webm">Webm</option>
+				<option value="application/dash+xml">DASH .mpd</option>
+				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
 			</select> sound file
 		</span>
@@ -45,6 +47,8 @@
 				<option value="audio/ogg">OGG Vorbis</option>
 				<option value="audio/aac">MP4 AAC</option>
 				<option value="audio/webm">Webm</option>
+				<option value="application/dash+xml">DASH .mpd</option>
+				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
 			</select> sound file
 		</span>
@@ -57,6 +61,8 @@
 				<option value="audio/ogg">OGG Vorbis</option>
 				<option value="audio/aac">MP4 AAC</option>
 				<option value="audio/webm">Webm</option>
+				<option value="application/dash+xml">DASH .mpd</option>
+				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
 			</select> sound file
 		</span>
