--- a/src/template.html
+++ b/src/template.html
@@ -69,15 +69,17 @@
 				</div>
 			</div>
 			<a id="actions" aria-label="${__.more}" title="${__.more}">
-				<svg>
-					<use xlink:href="#share_symbol" />
+				<svg viewBox="0 0 32 32" aria-hidden="true">
+					<circle cx="7" cy="16" r="3" />
+					<circle cx="16" cy="16" r="3" />
+					<circle cx="25" cy="16" r="3" />
 				</svg>
 			</a>
 		</section>
 		<section id="pageshare">
 			<a href="#" target="social" id="nativeshare" aria-label="${__.share}" title="${__.share}">
-				<svg>
-					<use xlink:href="#share_symbol" />
+				<svg viewBox="0 0 32 32" aria-hidden="true">
+					<path d="M 21 0 C 18.2 0 16 2.2 16 5 C 16 5.1 16 5.2 16.0 5.2 L 8.2 9.2 C 7.3 8.4 6.2 8 5 8 C 2.2 8 0 10.2 0 13 C 0 15.8 2.2 18 5 18 C 6.2 18 7.3 17.5 8.2 16.8 L 16 20.8 C 16.0 20.8 16 20.9 16 21 C 16 23.8 18.2 26 21 26 C 23.8 26 26 23.8 26 21 C 26 18.2 23.8 16 21 16 C 19.8 16 18.7 16.4 17.8 17.2 L 10 13.3 C 10 13.2 10 13.1 10 13 C 10 12.9 10 12.8 10 12.8 L 17.8 8.8 C 18.7 9.6 19.8 10 21 10 C 23.8 10 26 7.8 26 5 C 26 2.2 23.8 0 21 0 Z"></path>
 				</svg>
 				<span class="nosmall">${__.share}</span>
 			</a>
@@ -118,8 +120,3 @@
 	<nav id="playlist" class="panel">
 	</nav>
 </div>
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-	  <symbol id="share_symbol" viewBox="-8 -8 40 40"  aria-hidden="true">
-    	<path d="M 21 0 C 18.2 0 16 2.2 16 5 C 16 5.1 16 5.2 16.0 5.2 L 8.2 9.2 C 7.3 8.4 6.2 8 5 8 C 2.2 8 0 10.2 0 13 C 0 15.8 2.2 18 5 18 C 6.2 18 7.3 17.5 8.2 16.8 L 16 20.8 C 16.0 20.8 16 20.9 16 21 C 16 23.8 18.2 26 21 26 C 23.8 26 26 23.8 26 21 C 26 18.2 23.8 16 21 16 C 19.8 16 18.7 16.4 17.8 17.2 L 10 13.3 C 10 13.2 10 13.1 10 13 C 10 12.9 10 12.8 10 12.8 L 17.8 8.8 C 18.7 9.6 19.8 10 21 10 C 23.8 10 26 7.8 26 5 C 26 2.2 23.8 0 21 0 Z"></path>
-  </symbol>
-</svg>
