--- a/live_config.html
+++ b/live_config.html
@@ -127,9 +127,10 @@
 		<label for="meta_hide_1" class="inline_block"><input id="meta_hide_1" name="meta_hide[]" type="checkbox" value="actions" />Actions</label>
 		<label for="meta_hide_2" class="inline_block"><input id="meta_hide_2" name="meta_hide[]" type="checkbox" value="chapters" />Chapters</label>
 		<label for="meta_hide_3" class="inline_block"><input id="meta_hide_3" name="meta_hide[]" type="checkbox" value="timeline" />Time-line</label>
-		<label for="meta_hide_4" class="inline_block"><input id="meta_hide_4" name="meta_hide[]" type="checkbox" value="panels" />Panels</label>
-		<label for="meta_hide_5" class="inline_block"><input id="meta_hide_5" name="meta_hide[]" type="checkbox" value="panels-title" />Panels' title</label>
-		<label for="meta_hide_6" class="inline_block"><input id="meta_hide_6" name="meta_hide[]" type="checkbox" value="panels-except-play" />Panels except playing</label>
+		<label for="meta_hide_4" class="inline_block"><input id="meta_hide_4" name="meta_hide[]" type="checkbox" value="tickers" />Tickers</label>
+		<label for="meta_hide_5" class="inline_block"><input id="meta_hide_5" name="meta_hide[]" type="checkbox" value="panels" />Panels</label>
+		<label for="meta_hide_6" class="inline_block"><input id="meta_hide_6" name="meta_hide[]" type="checkbox" value="panels-title" />Panels' title</label>
+		<label for="meta_hide_7" class="inline_block"><input id="meta_hide_7" name="meta_hide[]" type="checkbox" value="panels-except-play" />Panels except playing</label>
 	</p>
 
 	<p>
