A semantic correction : the play/pause/wait is a <button>

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 		<section id="pageerror" role="alert">
 		</section>
 		<section id="pagemain">
-			<a id="control" tabindex="0">
+			<button type="button" id="control" tabindex="0">
 				<svg id="loading" aria-label="${__.loading}" viewBox="0 0 32 32" aria-hidden="true">
 					<circle cx="6" cy="22" r="4" />
 					<circle cx="16" cy="22" r="4" />
@@ -20,7 +20,7 @@
 					<title>${__.play}</title>
 					<path d="M 6,6 6,26 26,16 z" />
 				</svg>
-			</a>
+			</button>
 			<div id="about">
 				<div id="titleline">
 					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></h5>
