Create a flash ticker, display on chapter change or hover
Add chapter name on pointer ? #95
Annotations in a ticker as in SoundCloud #76

--- a/src/template.html
+++ b/src/template.html
@@ -65,6 +65,7 @@
 					<div id="time">
 						<div id="loadingline" role="progressbar"></div>
 						<time id="popup">--:--</time>
+						<div id="infoline" class="nosmall"></div>
 					</div>
 				</div>
 			</div>
