--- a/src/template.html
+++ b/src/template.html
@@ -65,17 +65,17 @@
 					<div id="time">
 						<div id="loadingline" role="progressbar"></div>
 						<time id="popup">--:--</time>
-						<div id="infoline" class="nosmall"></div>
 					</div>
 				</div>
+				<!-- div id="infoline" class="nosmallest"></div -->
 			</div>
-			<a id="actions" aria-label="${__.more}" title="${__.more}">
+			<button id="actions" aria-label="${__.more}" title="${__.more}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<circle cx="7" cy="16" r="3" />
 					<circle cx="16" cy="16" r="3" />
 					<circle cx="25" cy="16" r="3" />
 				</svg>
-			</a>
+			</button>
 		</section>
 		<section id="pageshare">
 			<a href="#" target="social" id="nativeshare" aria-label="${__.share}" title="${__.share}">
