--- a/live_chapters.html
+++ b/live_chapters.html
@@ -22,7 +22,7 @@
 
 <!-- -->
 
-<form id="configure" action="#edit_chapters" class="pan" >
+<form id="configure" action="#edit_chapters" class="pan" method="post">
 
     <fieldset>
         <label for="source_audio">
@@ -46,11 +46,14 @@
         <button type="submit">Go to editor</button>
     </fieldset>
 
+    <p>Todo : a button "repeal previous edition"</p>
+    <p>Think my editor is ugly ? You're right ! <a href="https://github.com/dascritch/cpu-audio/blob/master/CONTRIBUTING.md">Just help us !</a></p>
+
 </form>
 
 <!-- -->
 
-<form id="edit_chapters" action="#generated_html" class="pan">
+<form id="edit_chapters" action="#generated_html" class="pan" method="post">
 
     <fieldset class="actions">
         <button type="button" id="add"><strong>+</strong> Add a chapter</button>
@@ -110,7 +113,6 @@
 </div>
 
 <script>
-document.location.hash = '#configure'; 
 
 var new_chapter_line;
 var sound_element, list_element, edit_source_audio_element, edit_source_waveform_element, edit_source_webvtt_element;
@@ -123,24 +125,8 @@ var cues = [];
 function set_source_audio() {
     let url = edit_source_audio_element.value;
     let is_track = sound_element.querySelector('track');
+    document.body.classList.add('loaded');
     
-    sound_CPU.add_plane('cursors', 'MODE PREVIEW', {track   : 'cursors', panel   : true});
-    sound_CPU.inject_css('cursors', `
-        .cursors {
-            left: -6px;
-        }
-        .cursors a {
-            height: 12px;
-            width: 12px;
-            position: relative;
-            display : inline-block;
-        }
-        .cursors img {
-            height: 12px;
-            width: 12px;
-        }
-    `);
-
     sound_element.src = url;
     sound_element.dataset.title = decodeURIComponent(url.replace(/(^.*\/)([^\/]+)/,'$2'));
     sound_element.dataset.waveform = edit_source_waveform_element.value;
@@ -161,7 +147,7 @@ function set_source_audio() {
         track_element.src = edit_source_webvtt_element.value;
         sound_CPU.build_chapters_loader();
     }
- }
+}
 
 function check_configure(event) {
     event.preventDefault();
@@ -246,6 +232,7 @@ function interpret_line(this_line_element) {
     }
     let seconds = Math.floor(document.CPU.convert.TimeInSeconds( time ));
     let text = this_line_element.querySelector('[type="text"]').value;
+    // TODO : clean HTML , perhaps via a innerHTML ?
     let this_line_data = {
         code: time,
         time: seconds,
@@ -260,14 +247,18 @@ function interpret_line(this_line_element) {
             // 'link' : function(){} ? 
     }
 
-    if ((! sound_CPU.get_plane('cursors')) || (! sound_CPU.get_point('cursors', this_line_element.id))) {
+    if (! sound_CPU.get_plane('cursors')) {
+        alert('sounds like problems')
+
+    }
+
+    if (! sound_CPU.get_point('cursors', this_line_element.id)) {
         sound_CPU.add_point('cursors', seconds, this_line_element.id, data);
     } else {
         data.start = seconds;
         sound_CPU.edit_point('cursors', this_line_element.id, data);
     }
-
-    
+   
 
     /** TODO : Reordinate by timestamp **/
     /** TODO : Add a .end **/
@@ -279,13 +270,16 @@ function event_line(event) {
         this_line_element = this_line_element.closest('p');
     }
     interpret_line(this_line_element);
-    sound_CPU.draw_point('cursors', this_line_element.id)
+    sound_CPU.refresh_plane('cursors');
+    //sound_CPU.draw_point('cursors', this_line_element.id)
 
 }
 
 function add_events_line(line) {
 
     line.addEventListener('input', event_line);
+    line.addEventListener('change', event_line);
+    line.addEventListener('click', event_line);
     // line.querySelector('.timecode_input').addEventListener('input', event_line);
     // line.querySelector('.text_input').addEventListener('input', event_line);
 }
@@ -338,24 +332,6 @@ function interpret_form(event) {
         return `WEBVTT FILE\n${out.join('')}\n`;
     }
 
-    function rebuild_track_and_display() {
-        // no more need to rebuild it
-        return;
-        /* Something is missing in the W3C spec... */
-        let comp_cpu = document.querySelector('cpu-audio').CPU;
-        let plane = 'chapters';
-        comp_cpu.add_plane(plane,'Preview chapters', {'track' : 'chapters'});
-        comp_cpu.clear_plane(plane);
-        let number = 0;
-        for(let line of chapters) {
-            number++;
-            let point = `chapter-${number}`;
-            comp_cpu.add_point(plane, line.time, point, {
-                text : line.text,
-                end :  number < chapters.length ? chapters[number].time : sound_element.duration 
-            });
-        }
-    }
 
     event.preventDefault();
     reorder_lines();
@@ -376,14 +352,16 @@ function interpret_form(event) {
     let vtt_virtual_file = prepare_export_file(vtt);
     document.getElementById('vtt_source_download').href = vtt_virtual_file;
     document.getElementById('vtt_source_download').download = sound_element.dataset.title.replace(/(.*)(\.(ogg|mp3|wav|flac|mp4|aac))$/,'$1') + '.vtt';
-    // update emuled tracklist in cpu-audio 
-    // rebuild_track_and_display();
+
     document.location.hash = '#generated_html';
 }
 
-document.addEventListener('DOMContentLoaded', function(){
+window.addEventListener('load', function(){
+    document.location.hash = '#configure';
+
     sound_element = document.getElementById('sound');
     list_element = document.getElementById('list');
+    // sometimes not fired at time, perhaps we need a CPULoaded event ?
     sound_CPU = sound_element.CPU_controller().CPU;
     edit_source_audio_element = document.getElementById('source_audio');
     edit_source_waveform_element = document.getElementById('source_waveform');
@@ -403,6 +381,28 @@ document.addEventListener('DOMContentLoaded', function(){
     list_element.addEventListener('click', check_for_actions);
 
     document.getElementById('edit_chapters').addEventListener('submit' , interpret_form);
+
+    sound_CPU.add_plane('cursors', 'Chapters preview', {track   : 'cursors', panel   : true});
+    sound_CPU.inject_css('cursors', `
+        .cursors {
+            left: -6px;
+        }
+        .cursors a {
+            height: 12px;
+            width: 12px;
+            position: relative;
+            display : inline-block;
+        }
+        .cursors img {
+            height: 12px;
+            width: 12px;
+        }
+        .cursors a:focus span {
+            display : block;
+            max-width : 50%;
+        }
+    `);
+
 });
 </script>
 
@@ -430,6 +430,10 @@ document.addEventListener('DOMContentLoaded', function(){
     }
 
     #steps {
+        display : none;
+    }
+
+    .loaded #steps {
         display: flex;
         width: 100%;
     }
@@ -442,6 +446,7 @@ document.addEventListener('DOMContentLoaded', function(){
     .pan {
         display :none ;
     }
+
     .pan:target {
         display :block ;
     }
